new ui changes'

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -28,6 +28,10 @@
             <mat-icon>dashboard</mat-icon>
             <span class="nav-text">Dashboard</span>
           </a>
+          <a mat-list-item routerLink="/inventory" routerLinkActive="active" (click)="onNavItemClick()" *ngIf="isAdmin()">
+            <mat-icon>inventory_2</mat-icon>
+            <span class="nav-text">Inventory</span>
+          </a>
           <a mat-list-item routerLink="/customers" routerLinkActive="active" (click)="onNavItemClick()">
             <mat-icon>people</mat-icon>
             <span class="nav-text">Customers</span>
